[metadata]
name = saltext.cloudflare_tunnel
description = Module to manage Cloudflare Tunnels
long_description = file: README.md
long_description_content_type = text/markdown
author = Martin Fedec
author_email = martin.fedec@gmail.com
keywords = salt-extension
url = https://github.com/mfedec/salt-ext-cloudflare-tunnel
project_urls =
    Source=https://github.com/mfedec
    Tracker=https://github.com/mfedec/issues
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.5
setup_requires =
  wheel
  setuptools>=50.3.2
  setuptools_scm[toml]>=3.4
  setuptools-declarative-requirements
install_requires =
  salt>=3003
  cloudflare
  # Add other module install requirements above this line

[options.packages.find]
where = src
exclude =
    tests

# When targetting Salt < 3003, you can remove the other 'options.entry_points' section and use this one
#[options.entry_points]
#salt.loader=
#
#  states_dirs = saltext.cloudflare_tunnel.loader:get_states_dirs
#
#  module_dirs = saltext.cloudflare_tunnel.loader:get_module_dirs
#

[options.entry_points]
salt.loader=
  saltext.cloudflare_tunnel = saltext.cloudflare_tunnel


[options.extras_require]
tests =
  pytest==6.2.4
  pytest-salt-factories==1.0.0rc21
dev =
  nox
  pre-commit==2.13.0
  pylint==2.13.9
  SaltPyLint
docs =
  sphinx
  furo
  sphinx-copybutton
  sphinx-prompt
  sphinxcontrib-spelling
  importlib_metadata; python_version < "3.8"
docsauto =
  sphinx-autobuild

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[sdist]
owner = root
group = root
